--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["gendiff"]
+
 [project]
 name = "hexlet-code"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.13"
+description = "Compares two configuration files and shows a difference."
 dependencies = []
 
 [project.scripts]
 gendiff = "gendiff.main:main"
-
