update GitHub Actions workflow and add development dependencies

--- a/.github/workflows/GH_actions.yml
+++ b/.github/workflows/GH_actions.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install uv
         run: pip install uv
 
-      - name: Install dependencies
-        run: uv sync
+      - name: Install dependencies (with dev)
+        run: uv sync --all-extras
 
       - name: Run linter (ruff)
         run: uv run ruff check gendiff tests
