--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ dependencies = [
 
 [project.scripts]
 gendiff = "gendiff.main:main"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+]
