--- a/.github/workflows/GH_actions.yml
+++ b/.github/workflows/GH_actions.yml
@@ -33,3 +33,13 @@ jobs:
 
       - name: Run coverage
         run: uv run pytest --cov=gendiff --cov-report xml
+
+      - name: Upload coverage to SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=maltoleb
+            -Dsonar.projectKey=maltoleb_python-project-50
+            -Dsonar.python.coverage.reportPaths=coverage.xml
