--- a/.github/workflows/GH_actions.yml
+++ b/.github/workflows/GH_actions.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.da226b3945e6441da21ddc598df7d0197964c0f9 }}
         with:
           args: >
             -Dsonar.organization=maltoleb
