--- a/.github/workflows/GH_actions.yml
+++ b/.github/workflows/GH_actions.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARQUBE }}
         with:
           args: >
             -Dsonar.organization=maltoleb
