chore: debug coverage paths for sonar

--- a/.github/workflows/GH_actions.yml
+++ b/.github/workflows/GH_actions.yml
@@ -45,5 +45,14 @@ jobs:
             -Dsonar.python.coverage.reportPaths=coverage.xml
       - name: Run tests with coverage
         run: uv run pytest --cov=gendiff --cov-report xml
+      - name: Debug coverage paths
+        run: |
+        echo "Первые строки coverage.xml:"
+        head -n 20 coverage.xml
       - name: Check coverage file
         run: ls -la coverage.xml
+      - name: Upload coverage to SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARQUBE }}
+
