--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ name = "hexlet-code"
 version = "0.1.0"
 description = "Compares two configuration files and shows a difference."
 dependencies = [
+    "pyyaml>=6.0.3",
     "ruff>=0.14.1",
 ]
 
