--- a/.github/workflows/github_actions_check.yml
+++ b/.github/workflows/github_actions_check.yml
@@ -29,7 +29,10 @@ jobs:
         run: uv run ruff check gendiff tests
 
       - name: Run tests with coverage
-        run: make test-coverage
+        run: |
+          cd /github/workspace
+          uv run pytest --cov=gendiff --cov-report=xml:coverage.xml
+
 
       - name: Debug coverage paths
         run: |
